--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@ document.getElementById("mute").addEventListener('click', function(event) {
 <p>
   <button id="mute">Mute/UnMute</button>
 </p>
-<frameset rows='50%, *' frameborder=no framespacing=0 border=0 allow="autoplay">
-    <frame src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1&mute=1" name=mainwindow frameborder=no framespacing=0 marginheight=0 marginwidth=0></frame>
+<frameset rows='100%, *' frameborder=no framespacing=0 border=0 >
+    <frame src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1&mute=1" name=mainwindow width="600" height="400" frameborder=no framespacing=0 marginheight=0 marginwidth=0></frame>
 </frameset>
