--- a/index.html
+++ b/index.html
@@ -38,6 +38,4 @@ document.getElementById("mute").addEventListener('click', function(event) {
 <p>
   <button id="mute">Mute/UnMute</button>
 </p>
-<frameset rows='100%, *' frameborder=no framespacing=0 border=0 >
-    <frame src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1&mute=1" name=mainwindow width="600" height="400" frameborder=no framespacing=0 marginheight=0 marginwidth=0></frame>
-</frameset>
+<iframe id="youtube-video" src="https://www.youtube.com/embed/dQw4w9WgXcQ?enablejsapi=1&autoplay=1&rel=0&mute=1" frameborder="0" width="600" height="400"></iframe>
