--- a/index.html
+++ b/index.html
@@ -38,4 +38,4 @@ document.getElementById("mute").addEventListener('click', function(event) {
 <p>
   <button id="mute">Mute/UnMute</button>
 </p>
-<iframe id="youtube-video" src="https://www.youtube.com/embed/dQw4w9WgXcQ?enablejsapi=1&autoplay=1&rel=0&mute=1" frameborder="0" width="600" height="400"></iframe>
+<iframe id="youtube-video" src="https://www.youtube.com/embed/dQw4w9WgXcQ?enablejsapi=1&autoplay=1&rel=0&mute=1" frameborder="0" width="600" height="400"allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
