--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<script>
+<!--<script>
     var tag = document.createElement('script');
 tag.src = "https://www.youtube.com/iframe_api";
 var firstScriptTag = document.getElementsByTagName('script')[0];
@@ -35,6 +35,7 @@ document.getElementById("mute").addEventListener('click', function(event) {
   }
 });
 </script>
+-->
 <p>
   <button id="mute">Mute/UnMute</button>
 </p>
