--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ function liveunmute() {
     player.unMute();
   }
 }
-setinterval(liveunmute, 1000)
+setInterval(liveunmute(), 1000)
 </script>
 
 <p>
