--- a/index.html
+++ b/index.html
@@ -1,40 +1,2 @@
 <!doctype html>
-<script>
-    var tag = document.createElement('script');
-tag.src = "https://www.youtube.com/iframe_api";
-var firstScriptTag = document.getElementsByTagName('script')[0];
-firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
-
-var player;
-
-function onYouTubeIframeAPIReady() {
-  player = new YT.Player('youtube-video', {
-    events: {
-      'onReady': onPlayerReady,
-      'onStateChange': onPlayerStateChange
-    }
-  });
-}
-
-function onPlayerReady() {
-  console.log("hey Im ready");
-  //do whatever you want here. Like, player.playVideo();
-}
-
-function onPlayerStateChange() {
-  console.log("my state changed");
-}
-
-
-function liveunmute() {
-   if (player.isMuted()) {
-    player.unMute();
-  }
-}
-setInterval(liveunmute(), 1000)
-</script>
-
-<p>
-  <button id="mute">Mute/UnMute</button>
-</p>
-<iframe id="youtube-video" src="https://www.youtube.com/embed/dQw4w9WgXcQ?enablejsapi=1&autoplay=1&rel=0&mute=1" frameborder="0" width="600" height="400"></iframe>
+<iframe id="youtube-video" src="https://www.youtube.com/embed/dQw4w9WgXcQ?enablejsapi=1&autoplay=1&rel=0&mute=1" frameborder="0"></iframe>
