--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <!doctype html>
-<iframe id="youtube-video" src="https://www.youtube.com/embed/dQw4w9WgXcQ?enablejsapi=1&autoplay=1&rel=0&mute=1" frameborder="0"></iframe>
+<iframe id="youtube-video" src="https://www.youtube.com/embed/dQw4w9WgXcQ?enablejsapi=1&autoplay=1&rel=0&mute=1" frameborder="0" allowfullscreen></iframe>
