--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
 <!doctype html>
-<iframe id="youtube-video" src="https://www.youtube.com/embed/dQw4w9WgXcQ?enablejsapi=1&autoplay=1&rel=0&mute=1" frameborder="0" allowfullscreen></iframe>
+<frameset rows='100%, *' frameborder=no framespacing=0 border=0>
+    <frame src="https://www.youtube-nocookie.com/embed/dQw4w9WgXcQ?controls=0" name=mainwindow frameborder=no framespacing=0 marginheight=0 marginwidth=0></frame>
+</frameset>
