--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!doctype html>
 <frameset rows='100%, *' frameborder=no framespacing=0 border=0>
-    <frame src="https://www.youtube-nocookie.com/embed/dQw4w9WgXcQ?controls=0" name=mainwindow frameborder=no framespacing=0 marginheight=0 marginwidth=0></frame>
+    <frame src="https://www.youtube-nocookie.com/embed/dQw4w9WgXcQ?autoplay=1&controls=0" name=mainwindow frameborder=no framespacing=0 marginheight=0 marginwidth=0></frame>
 </frameset>
